test/spec_vectors/simd_i8x16_arith2/fail/module_18.wat
(module (func $i8x16.max_s-1st-arg-empty (result v128) (i8x16.max_s (v128.const i8x16 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0))))